--- a/.env
+++ b/.env
@@ -1,4 +1,23 @@
-#THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/main/obsidian.css
-#THEME=https://github.com/kepano/obsidian-minimal/blob/master/obsidian.css
-#BASE_THEME=light
+THEME=https://raw.githubusercontent.com/AllJavi/material_gruvbox_obsidian/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=Writing
+SITE_BASE_URL=https://dg-notes-three.vercel.app/
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=yyyy-MM-dd HH:mm
+SHOW_UPDATED_TIMESTAMP=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=""
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=true
+dgShowInlineTitle=false
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=true
