--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=true
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=false
 dgLinkPreview=false
 dgShowTags=true
