--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/AllJavi/material_gruvbox_obsidian/HEAD/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=Writing
+SITE_NAME_HEADER=Notes
 SITE_BASE_URL=https://dg-notes-three.vercel.app/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=yyyy-MM-dd HH:mm
