--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=false
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=false
 dgShowToc=false
 dgLinkPreview=false
